--- a/views/main.scss
+++ b/views/main.scss
@@ -440,6 +440,36 @@ nav.pushy {
       font-weight: 100;
     }
 
+    @include max-screen(900px) {
+      h1 {
+        font-size: 4rem*0.95 !important;
+      }
+
+      h3 {
+        font-size: 3rem*0.95 !important;
+      }
+    }
+
+    @include max-screen(500px) {
+      h1 {
+        font-size: 4rem*0.8 !important;
+      }
+
+      h3 {
+        font-size: 3rem*0.8 !important;
+      }
+    }
+
+    @include max-screen(350px) {
+      h1 {
+        font-size: 4rem*0.7 !important;
+      }
+
+      h3 {
+        font-size: 3rem*0.7 !important;
+      }
+    }
+
     & > h3 {
       // font-size: 3rem;
       // margin-bottom: 0;
