--- a/views/index.erb
+++ b/views/index.erb
@@ -14,7 +14,7 @@
 <section id="content-wrap">
 	<div class="body-text">
 		<h1>Who am I?</h1>
-		<p>I'm a freshman at MIT, and I'm passionate about computer science. I've spent the better part of my life (10+ years and counting!)
+		<p>I'm a freshman at MIT, and I'm passionate about computer science. I've spent the better part of my life (10+ years and counting of hacking &amp; pixel pushing!)
 			programming, and I don't plan on slowing down anytime soon.</p>
 
 		<p>I've explored and learned a whole lot since then. Game hacking, mobile dev, algorithms, reverse engineering, computer vision, web dev, robotics, machine learning&hellip; if you can name it,
@@ -37,7 +37,7 @@
 				<div class="label">
 					<h2>Dropbox &mdash; Software Engineering Internship</h2>
 					<span class="more">
-						<p>I worked on Dropbox's new contacts infrastructure containing billions of contacts. Improved aggregation, search quality, and relevance.</p>
+						<p>I worked on Dropbox's new contacts infrastructure, which stores billions of contacts. Improved search quality, aggregation, and relevance.</p>
 					</span>
 				</div>
 			</li>
@@ -132,10 +132,5 @@
 		<p>Like what you see? I'm always looking for <strong>awesome &amp; fun</strong> opportunities. I'd love to hear from
 		you! Hit me up <a href="<%= @nav == 'home' ? '#contact' : '/#contact'%>">here</a>.
 		</p>
-	</div>
-</section>
-<section id="content-wrap">
-	<div class="body-text">
-		<p>10 years of hacking and pixel pushing...</p>
 	</div>
 </section>
