--- a/views/main.scss
+++ b/views/main.scss
@@ -34,7 +34,7 @@ body {
 
 #container {
   // TODO, maybe remove padding for all so its flush
-  padding-bottom: 40px;
+  // padding-bottom: 40px;
   // padding-top: $page-top-padding;
 
   // TODO: should these be fixed?
@@ -46,13 +46,14 @@ body {
 
 // Sync padding and other props with #container!
 footer {
-  padding-left: 40px;
-  padding-right: 40px;
+  // padding-left: 40px;
+  // padding-right: 40px;
   color: #ddd;
   margin: 0 auto;
   font-weight: 100;
   font-size: 2rem;
-  margin-bottom: 40px;
+  margin-bottom: 20px;
+  margin-top: 20px;
   position: relative;
 
   .wrapper {
@@ -65,6 +66,10 @@ footer {
       color: #ddd;
       border-bottom: 1px solid;
       text-decoration: none;
+    }
+
+    time {
+
     }
 
     .copyleft {
@@ -524,6 +529,10 @@ nav.pushy {
   opacity: 0.5;
   width: 100%;
   height: 100%;
+}
+
+.darken-filter.less {
+  opacity: 0.3 !important;
 }
 
 @-webkit-keyframes bounce-fade {
@@ -1010,6 +1019,7 @@ q:after {
         @include transition(all .3s ease-in-out);
         div {
           @include border-radius(5px);
+          @include transition(all .3s ease-in-out);
         }
       }
     }
