--- a/views/index.erb
+++ b/views/index.erb
@@ -11,7 +11,7 @@
 		</div>
 	</div>
 </section>
-<section id="content-wrap">
+<section id="content-wrap"><section id="about">
 	<div class="body-text">
 		<h1>Who am I?</h1>
 		<p>I'm a freshman at MIT, and I'm passionate about computer science. I've spent the better part of my life (10+ years and counting of hacking &amp; pixel pushing!)
@@ -132,5 +132,16 @@
 		<p>Like what you see? I'm always looking for <strong>awesome &amp; fun</strong> opportunities. I'd love to hear from
 		you! Hit me up <a href="<%= @nav == 'home' ? '#contact' : '/#contact'%>">here</a>.
 		</p>
+	</div>
+</section></section>
+<section id="contact">
+	<div class="contact-img"><div class="darken-filter"></div></div>
+	<div class="stuff">
+		<!-- <div class="masthead-home-tagline">
+			<div class>
+				<h3 class="animated slideInDown"><em><%= GREETINGS.last %></em> :<span class="paren">)</span></h3>
+				<h1 class="animated slideInDown">I'm <strong>Stanley</strong>, a freshman@mit, intern@dropbox, and builder of things.</h1>
+			</div>
+		</div> -->
 	</div>
 </section>
