--- a/views/index.erb
+++ b/views/index.erb
@@ -137,11 +137,9 @@
 <section id="contact">
 	<div class="contact-img"><div class="darken-filter"></div></div>
 	<div class="stuff">
-		<!-- <div class="masthead-home-tagline">
-			<div class>
-				<h3 class="animated slideInDown"><em><%= GREETINGS.last %></em> :<span class="paren">)</span></h3>
-				<h1 class="animated slideInDown">I'm <strong>Stanley</strong>, a freshman@mit, intern@dropbox, and builder of things.</h1>
+		<div class="wrap">
+			<div class='body-text'>
 			</div>
-		</div> -->
+		</div>
 	</div>
 </section>
