--- a/views/main.scss
+++ b/views/main.scss
@@ -1057,10 +1057,10 @@ q:after {
       height: 100%;
       width: 100%;
       overflow: hidden;
+      background: url(/img/city.jpg);
       background-repeat: no-repeat !important;
-      background-position: center 0 !important;
+      background-position: center center !important;
       background-size: cover !important;
-      background: url(/img/parallax3.jpg);
       margin: 0 auto;
       position: absolute;
       top: 0;
