--- a/views/layout.erb
+++ b/views/layout.erb
@@ -42,7 +42,7 @@ var _gaq=_gaq||[];_gaq.push(["_setAccount","UA-4253037-6"]),_gaq.push(["_setDoma
 			<footer>
 				<div class="wrapper">
 					<div class="copyleft">
-						Designed with &lt;3 by Stanley Cen
+						Made with <span id='heart'>♥</span> by Stanley
 					</div>
 					<div class="latest-commit">
 						<% if !is_heroku? or (is_heroku? and $heroku and $last_commit and $the_commit) %>Deployed revision <a href="https://github.com/scen/stanleycen.com/commit/<%= get_commit_sha %>">
