--- a/views/main.scss
+++ b/views/main.scss
@@ -44,6 +44,12 @@ body {
   // padding-right: 40px;
 }
 
+// @keyframes heartbeat {
+//     0%   { @include transform(scale3d(1.1,1.1,1)); }
+//     50%   { @include transform(scale3d(.8,.8,1)); }
+//     100%   { @include transform(scale3d(1,1,1)); }
+// }
+
 // Sync padding and other props with #container!
 footer {
   // padding-left: 40px;
@@ -75,6 +81,10 @@ footer {
     .copyleft {
       float: left;
       overflow: auto;
+
+      #heart {
+        // animation: heartbeat 1.4s linear infinite;
+      }
     }
     .latest-commit {
       float: right;
@@ -1051,7 +1061,6 @@ q:after {
 }
 
 #contact {
-  height: 600px;
   position: relative;
   .contact-img {
       height: 100%;
@@ -1068,10 +1077,73 @@ q:after {
   }
   .stuff {
     color: white;
-    position: absolute;
+    position: relative;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
+
+    .wrap {
+      position: relative;
+      height: 100%;
+      margin: 0 auto;
+      padding-top: 40px;
+      padding-bottom: 40px;
+
+      .body-text {
+        color: white !important;
+        h1, h2, h3, h4, h5, p {
+          color: white;
+        }
+      }
+    }
+  }
+}
+
+#contact_form {
+  margin-top: 1.4em;
+
+  #send-error {
+    display: none;
+  }
+  #submit_message {
+    color: white;
+    border-color: white;
+    &:hover {
+      border-color: #78dba9
+    }
+  }
+  ul {
+    width: 100%;
+    list-style: none;
+    margin: 0 auto;
+    padding: 0;
+    li {
+      margin: 0 auto;
+      margin-bottom: .8em;
+      textarea {
+        min-height: 100px;
+      }
+      input, textarea {
+        -webkit-appearance: none;
+        -moz-appearance: none;
+        appearance: none;
+        background: none;
+        width: 100%;
+        border: 1px solid white;
+        border-radius: 2px;
+        -webkit-box-sizing: border-box;
+        -moz-box-sizing: border-box;
+        box-sizing: border-box;
+        padding: 6px;
+        &:focus {
+          outline: none;
+          border: 1px solid #78dba9;
+        }
+        @include placeholder {
+          color: #ccc;
+        }
+      }
+    }
   }
 }
