--- a/views/mixins.scss
+++ b/views/mixins.scss
@@ -52,3 +52,21 @@
     -moz-box-shadow: $top $left $blur $spread $color;
     box-shadow: $top $left $blur $spread $color;
 }
+
+@mixin placeholder {
+    &::-webkit-input-placeholder {
+        @content;
+    }
+
+    &:-moz-placeholder { /* Firefox 18- */
+        @content;
+    }
+
+    &::-moz-placeholder {  /* Firefox 19+ */
+        @content;
+    }
+
+    &:-ms-input-placeholder {
+        @content;
+    }
+}
