--- a/views/blog.erb
+++ b/views/blog.erb
@@ -5,7 +5,7 @@
         </div>
     </div>
 </section>
-<section id='content-wrap' class="blog-all">
+<section class="content-wrap blog-all">
 	<div class='posts-wrap body-text'>
 		<% @posts.each do |(slug, post)| %>
 			<div class='blog-masonry-post'>
