--- a/views/blog_post.erb
+++ b/views/blog_post.erb
@@ -11,7 +11,7 @@
         </div>
     </div>
 </section>
-<section id="content-wrap">
+<section class="content-wrap">
     <div class="body-text">
         <%= @post.cache_full ||= format_post @post.content %>
     </div>
