--- a/views/index.erb
+++ b/views/index.erb
@@ -11,7 +11,7 @@
 		</div>
 	</div>
 </section>
-<section id="content-wrap"><section id="about">
+<section class="content-wrap" id="about">
 	<div class="body-text">
 		<h1>Who am I?</h1>
 		<p>I'm a freshman at MIT, and I'm passionate about computer science. I've spent the better part of my life (10+ years and counting of hacking &amp; pixel pushing!)
@@ -133,7 +133,7 @@
 		you! Hit me up <a href="<%= @nav == 'home' ? '#contact' : '/#contact'%>">here</a>.
 		</p>
 	</div>
-</section></section>
+</section>
 <section id="contact">
 	<div class="contact-img"><div class="darken-filter"></div></div>
 	<div class="stuff">
@@ -163,7 +163,6 @@
 						</ul>
 					</form>
 				</div>
-				<!-- <h1>&hellip;or check me out on&hellip;</h1> -->
 			</div>
 		</div>
 	</div>
