--- a/views/main.scss
+++ b/views/main.scss
@@ -615,7 +615,7 @@ nav.pushy {
 
 // Content
 
-#content-wrap {
+.content-wrap {
   background-color: white;
   padding-top: 50px;
   padding-bottom: 50px;
