--- a/views/index.erb
+++ b/views/index.erb
@@ -130,7 +130,7 @@
 	</div>
 	<div class="body-text">
 		<p>Like what you see? I'm always looking for <strong>awesome &amp; fun</strong> opportunities. I'd love to hear from
-		you! Hit me up <a href="<%= @nav == 'home' ? '#contact' : '/#contact'%>">here</a>.
+		you!
 		</p>
 	</div>
 </section>
