--- a/views/index.erb
+++ b/views/index.erb
@@ -54,7 +54,7 @@
 				<div class="label">
 					<h2>NASDAQ &mdash; Data Science Externship</h2>
 					<span class="more">
-						<p>A team 4 fellow MIT students and I built, tested, and pipelined a statistical model using R and Python to predict customer cancellations.</p>
+						<p>A team of 4 fellow MIT students and I built, tested, and pipelined a statistical model using R and Python to predict customer cancellations.</p>
 					</span>
 				</div>
 			</li>
@@ -71,7 +71,7 @@
 				<div class="label">
 					<h2>Competitive programming</h2>
 					<span class="more">
-						<p>I was a <a href="http://usaco.org/">USA Computing Olympiad</a> finalist in <a href="http://usaco.org/index.php?page=finalists12">2012</a> and <a href="http://usaco.org/index.php?page=finalists13">2013</a>. Lots and lots of algorithms.</p>
+						<p>I was a <a href="http://usaco.org/">USA Computing Olympiad</a> finalist in <a href="http://usaco.org/index.php?page=finalists12">2012</a> and <a href="http://usaco.org/index.php?page=finalists13">2013</a>.</p>
 					</span>
 				</div>
 			</li>
@@ -139,17 +139,17 @@
 	<div class="stuff">
 		<div class="wrap">
 			<div class='body-text'>
-				<h1>Let's get in touch!</h1>
+				<h1>Questions or comments?</h1>
 				<div id="contact_form">
 					<form>
 						<input type="hidden" name="salt" id="salt" />
 						<ul>
 							<li id="send-error"><span>Sorry! An error occured while sending.</span></li>
 							<li>
-								<input autocomplete="off" type="text" id="name" name="name" placeholder="name" required/>
+								<input autocomplete="off" type="text" id="name" name="name" placeholder="your name" required/>
 							</li>
 							<li>
-								<input autocomplete="off" type="email" id="email" name="email" placeholder="email" required/>
+								<input autocomplete="off" type="email" id="email" name="email" placeholder="your email" required/>
 							</li>
 							<li>
 								<input autocomplete="off" type="text" id="subject" name="subject" placeholder="subject" required/>
