--- a/views/index.erb
+++ b/views/index.erb
@@ -14,7 +14,7 @@
 <section class="content-wrap" id="about">
 	<div class="body-text">
 		<h1>Who am I?</h1>
-		<p>I'm a freshman at MIT, and I'm passionate about computer science. I've spent the better part of my life (10+ years and counting of hacking &amp; pixel pushing!)
+		<p>I'm a freshman at MIT, and I'm passionate about computer science. I've spent the better part of my life (10+ years and counting!)
 			programming, and I don't plan on slowing down anytime soon.</p>
 
 		<p>I've explored and learned a whole lot since then. Game hacking, mobile dev, algorithms, reverse engineering, computer vision, web dev, robotics, machine learning&hellip; if you can name it,
