--- a/views/index.erb
+++ b/views/index.erb
@@ -5,7 +5,7 @@
 			<div class="masthead-home-tagline">
 				<div class>
 					<h3 class="animated slideInDown"><em><%= GREETINGS.last %></em> :<span class="paren">)</span></h3>
-					<h1 class="animated slideInDown">I'm <strong>Stanley</strong>, a freshman@mit, intern@dropbox, and builder of things.</h1>
+					<h1 class="animated slideInDown">I'm <strong>Stanley</strong>, a sophomore@mit, intern@dropbox, and builder of things.</h1>
 				</div>
 			</div>
 		</div>
@@ -14,7 +14,7 @@
 <section class="content-wrap" id="about">
 	<div class="body-text">
 		<h1>Who am I?</h1>
-		<p>I'm a freshman at MIT, and I'm passionate about computer science. I've spent the better part of my life (10+ years and counting!)
+		<p>I'm a sophomore at MIT (class of 2018), and I'm passionate about computer science. I've spent the better part of my life (10+ years and counting!)
 			programming, and I don't plan on slowing down anytime soon.</p>
 
 		<p>I've explored and learned a whole lot since then. Game hacking, mobile dev, algorithms, reverse engineering, computer vision, web dev, robotics, machine learning&hellip; if you can name it,
