--- a/views/layout.erb
+++ b/views/layout.erb
@@ -10,7 +10,7 @@
         </title>
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
 		<% if @nav == 'home' %>
-			<meta name="Description" content="Helloo there! I'm Stanley Cen, freshman at MIT studying computer science and an intern at Dropbox!">
+			<meta name="Description" content="Hi there! I'm Stanley Cen, a sophomore at MIT studying computer science and a Dropbox intern.">
 		<% end %>
 		<link rel="author" href="/humans.txt" />
 		<link href="//cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css" rel="stylesheet" type="text/css"/>
