--- a/views/index.erb
+++ b/views/index.erb
@@ -5,7 +5,7 @@
 			<div class="masthead-home-tagline">
 				<div class>
 					<h3 class="animated slideInDown"><em><%= GREETINGS.last %></em> :<span class="paren">)</span></h3>
-					<h1 class="animated slideInDown">I'm <strong>Stanley</strong>, a sophomore@mit, intern@dropbox, and builder of things.</h1>
+					<h1 class="animated slideInDown">I'm <strong>Stanley</strong>, a sophomore@mit and intern@dropbox. I build things.</h1>
 				</div>
 			</div>
 		</div>
@@ -105,7 +105,7 @@
 				<div class="label">
 					<h2>Learning, hacking, building, and more learning</h2>
 					<span class="more">
-						<p>Must. Learn. Everything. 100+ random side projects.</p>
+						<p>Must. Learn. Everything. Dozens of random side projects.</p>
 					</span>
 				</div>
 			</li>
@@ -129,9 +129,15 @@
 		</ul>
 	</div>
 	<div class="body-text">
-		<p>Like what you see? I'm always looking for <strong>awesome &amp; fun</strong> opportunities. I'd love to hear from
+		<p>Like what you see? I'm always looking for <strong>awesome &amp; fun</strong> opportunities. I'd love to <a href="#contact" id='contact-hear'>hear</a> from
 		you!
 		</p>
+		<p>Anyways, outside of that kinda stuff, I like playing the guitar, the piano, and ultimate frisbee. I have <a href="https://en.wikipedia.org/wiki/Absolute_pitch">perfect pitch</a> (1 in ~10,000 people!) and love to play things I hear on the radio by ear.
+		</p>
+		<p>A blurb about this website &mdash; it starts out as a Sinatra Ruby app and is pumped through a really hacky static site generator I wrote, which is then hosted on GitHub pages. Shoutout to <a href="https://unsplash.com/">Unsplash</a>, <a href="http://masonry.desandro.com/">Masonry</a>, and <a href="http://terrymun.github.io/Fluidbox/">Fluidbox</a> for making my job so much easier.</p>
+		<div class="humanstxt">
+			<a href="/humans.txt"><img src="/img/logo-humans.png"/></a>
+		</div>
 	</div>
 </section>
 <section id="contact">
@@ -139,7 +145,7 @@
 	<div class="stuff">
 		<div class="wrap">
 			<div class='body-text'>
-				<h1>Questions or comments?</h1>
+				<h1>Let's get in touch! Simply fill this out&hellip;</h1>
 				<div id="contact_form">
 					<form>
 						<input type="hidden" name="salt" id="salt" />
@@ -163,6 +169,12 @@
 						</ul>
 					</form>
 				</div>
+				<h1>&hellip;or find me on&hellip;</h1>
+				<ul class='more-contact'>
+					<li><a href="http://github.com/scen">github</a></li>
+					<li><a href="https://www.linkedin.com/in/stanleycen">linkedin</a> (i don't use it <sup><i>yet</i></sup>)</li>
+					<li><a href="mailto:hello@stanleycen.com">hello@stanleycen.com</a></li>
+				</ul>
 			</div>
 		</div>
 	</div>
