--- a/views/layout.erb
+++ b/views/layout.erb
@@ -12,7 +12,7 @@
 		<% if @nav == 'home' %>
 			<meta name="Description" content="Hi there! I'm Stanley Cen, a sophomore at MIT studying computer science and a Dropbox intern.">
 		<% end %>
-		<link rel="author" href="/humans.txt" />
+		<link type="text/plain" rel="author" href="/humans.txt" />
 		<link href="//cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css" rel="stylesheet" type="text/css"/>
 		<link href="/main.css" rel="stylesheet" type="text/css"/>
 		<style type="text/css">
