--- a/views/main.scss
+++ b/views/main.scss
@@ -1095,6 +1095,14 @@ q:after {
       opacity: .8;
     }
   }
+  .more-contact {
+    list-style-type: disc;
+    margin-left: 20px;
+    li a {
+      color: white;
+      border-color: white;
+    }
+  }
   .stuff {
     color: white;
     position: relative;
@@ -1122,7 +1130,6 @@ q:after {
 
 #contact_form {
   margin-top: 1.4em;
-
 
   .thanks, .error {
     line-height: 38px; // this is the button height. so it's v-centered with it.
@@ -1156,9 +1163,9 @@ q:after {
     list-style: none;
     margin: 0 auto;
     padding: 0;
-    li:last-child {
-      margin-bottom: 0 !important;
-    }
+    // li:last-child {
+    //   margin-bottom: 0 !important;
+    // }
     li {
       margin: 0 auto;
       margin-bottom: .8em;
@@ -1197,6 +1204,25 @@ q:after {
     }
   }
 }
+
+.humanstxt {
+      text-align: center;
+      margin-top: 50px;
+      a {
+        border: none;
+        img {
+          width: 250px;
+          -webkit-transition: .25s;
+          -moz-transition: .25s;
+          -ms-transition: .25s;
+          -o-transition: .25s;
+          transition: .25s;
+          &:hover {
+            opacity: .7;
+          }
+        }
+      }
+    }
 
 // animate.css
 
