add utf8 charset

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -8,6 +8,7 @@
                     Stanley Cen
             <% end %>
         </title>
+        <meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
 		<% if @nav == 'home' %>
 			<meta name="Description" content="Hi there! I'm Stanley Cen, a sophomore at MIT studying computer science and a Dropbox intern.">
