--- a/views/layout.erb
+++ b/views/layout.erb
@@ -11,7 +11,7 @@
         <meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
 		<% if @nav == 'home' %>
-			<meta name="Description" content="Hi there! I'm Stanley Cen, MIT sophomore studying computer science and intern at Dropbox. I build things.">
+			<meta name="Description" content="Hi there! I'm Stanley Cen, a sophomore at MIT studying computer science and intern at Dropbox. I build things.">
 		<% end %>
 		<link type="text/plain" rel="author" href="/humans.txt" />
 		<link href="//cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css" rel="stylesheet" type="text/css"/>
