--- a/views/layout.erb
+++ b/views/layout.erb
@@ -13,6 +13,8 @@
 		<% if @nav == 'home' %>
 			<meta name="Description" content="Hi there! I'm Stanley Cen, a sophomore at MIT studying computer science and intern at Dropbox. I build things.">
 		<% end %>
+		<link rel="dns-prefetch" href="//cdnjs.cloudflare.com">
+		<link rel="dns-prefetch" href="//ajax.googleapis.com">
 		<link type="text/plain" rel="author" href="/humans.txt" />
 		<link href="//cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css" rel="stylesheet" type="text/css"/>
 		<link href="/main.css" rel="stylesheet" type="text/css"/>
