unbreak masthead stuff for iOS safari

--- a/views/blog.erb
+++ b/views/blog.erb
@@ -1,8 +1,6 @@
 <!-- Maybe add header sized parallax here :) -->
-<section id="no-masthead-img">
-    <div class="parallax-wrap">
-        <div class="parallax-img masthead-parallax-img"><div class="darken-filter"></div></div>
-        </div>
+<section id="no-masthead-img" class='parallax-wrap'>
+    <div class="parallax-img masthead-parallax-img"><div class="darken-filter"></div></div>
     </div>
 </section>
 <section class="content-wrap blog-all">
