--- a/views/index.erb
+++ b/views/index.erb
@@ -1,5 +1,4 @@
-<section id="masthead">
-	<div class="parallax-wrap">
+<section id="masthead" class='parallax-wrap'>
 		<div class="parallax-img masthead-parallax-img"><div class="darken-filter"></div></div>
 		<div class="parallax-content">
 			<div class="masthead-home-tagline">
@@ -9,7 +8,6 @@
 				</div>
 			</div>
 		</div>
-	</div>
 </section>
 <section class="content-wrap" id="about">
 	<div class="body-text">
