--- a/views/main.scss
+++ b/views/main.scss
@@ -1121,7 +1121,7 @@ q:after {
       .body-text {
         color: white !important;
         h1, h2, h3, h4, h5, p {
-          color: #ddd;
+          color: #eee;
         }
       }
     }
@@ -1211,7 +1211,7 @@ q:after {
       a {
         border: none;
         img {
-          width: 250px;
+          width: 200px;
           -webkit-transition: .25s;
           -moz-transition: .25s;
           -ms-transition: .25s;
