ugly HAX to make vh work on chrome

--- a/views/blog_post.erb
+++ b/views/blog_post.erb
@@ -8,6 +8,8 @@
             </div>
         </div>
     </div>
+    <div id='scroll-notifier'>
+    </div>
 </section>
 <section class="content-wrap">
     <div class="body-text">
