--- a/views/index.erb
+++ b/views/index.erb
@@ -8,6 +8,8 @@
 				</div>
 			</div>
 		</div>
+		<div id='scroll-notifier'>
+		</div>
 </section>
 <section class="content-wrap" id="about">
 	<div class="body-text">
