--- a/views/index.erb
+++ b/views/index.erb
@@ -4,7 +4,7 @@
 			<div class="masthead-home-tagline">
 				<div class>
 					<h3 class="animated slideInDown"><em><%= GREETINGS.last %></em> :<span class="paren">)</span></h3>
-					<h1 class="animated slideInDown">I'm <strong>Stanley</strong>, a sophomore@mit and intern@dropbox. I build things.</h1>
+					<h1 class="animated slideInDown">I'm <strong>Stanley</strong>, a sophomore@mit and former intern@dropbox. I build things.</h1>
 				</div>
 			</div>
 		</div>
