--- a/views/index.erb
+++ b/views/index.erb
@@ -4,7 +4,7 @@
 			<div class="masthead-home-tagline">
 				<div class>
 					<h3 class="animated slideInDown"><em><%= GREETINGS.last %></em> :<span class="paren">)</span></h3>
-					<h1 class="animated slideInDown">I'm <strong>Stanley</strong>, a sophomore@mit and former intern@dropbox. I build things.</h1>
+					<h1 class="animated slideInDown">I'm <strong>Stanley</strong>, a junior@mit, intern@google, and former intern@dropbox. I build things.</h1>
 				</div>
 			</div>
 		</div>
@@ -20,10 +20,44 @@
 		<p>I've explored and learned a whole lot since then. Game hacking, mobile dev, algorithms, reverse engineering, computer vision, web dev, robotics, machine learning&hellip; if you can name it,
 		 I've probably (at least) dabbled in it.</p>
 
-		 <p>For your enjoyment, here's a (reverse) timeline of selected milestones in my life as a software engineer:</p>
+		 <p>Here's a (reverse) timeline of selected milestones in my life as a software engineer:</p>
 	</div>
 	<div class="timeline-wrap">
 		<ul class="timeline">
+			<li>
+				<time>
+					<span>
+						Sophomore Year
+					</span>
+					<span>
+						Summer '16
+					</span>
+				</time>
+				<div class="waypoint"></div>
+				<div class="label">
+					<h2>Google &mdash; Software Engineering Internship</h2>
+					<span class="more">
+						<p>I worked on Learning Powerhouse (LPH), an internal machine learning framework.</p>
+					</span>
+				</div>
+			</li>
+			<li>
+				<time>
+					<span>
+						Sophomore Year
+					</span>
+					<span>
+						January '16
+					</span>
+				</time>
+				<div class="waypoint"></div>
+				<div class="label">
+					<h2>Jane Street Capital &mdash; Software Engineering Internship</h2>
+					<span class="more">
+						<p>I worked on infrastructure for job scheduling.</p>
+					</span>
+				</div>
+			</li>
 			<li>
 				<time>
 					<span>
@@ -129,12 +163,12 @@
 		</ul>
 	</div>
 	<div class="body-text">
-		<p>Like what you see? I'm always looking for <strong>awesome &amp; fun</strong> opportunities. I'd love to <a href="#contact" id='contact-hear'>hear</a> from
+		<p>Like what you see? I'm always looking for cool opportunities. I'd love to <a href="#contact" id='contact-hear'>hear</a> from
 		you!
 		</p>
 		<p>Anyways, outside of that kinda stuff, I like playing the guitar, the piano, and ultimate frisbee. I have <a href="https://en.wikipedia.org/wiki/Absolute_pitch">perfect pitch</a> (1 in ~10,000 people!) and love to play things I hear on the radio by ear.
 		</p>
-		<p>A blurb about this website &mdash; it starts out as a Sinatra Ruby app and is pumped through a really hacky static site generator I wrote, which is then hosted on GitHub pages. Shoutout to <a href="https://unsplash.com/">Unsplash</a>, <a href="http://masonry.desandro.com/">Masonry</a>, and <a href="http://terrymun.github.io/Fluidbox/">Fluidbox</a> for making my job so much easier.</p>
+		<p>A blurb about this website &mdash; it starts out as a Sinatra Ruby app and is pumped through a really hacky static site generator I wrote, which is then hosted on GitHub pages. Shoutout to <a href="https://unsplash.com/">Unsplash</a>, <a href="http://masonry.desandro.com/">Masonry</a>, and <a href="http://terrymun.github.io/Fluidbox/">Fluidbox</a> for doing all the hard work for me.</p>
 		<div class="humanstxt">
 			<a href="/humans.txt"><img src="/img/logo-humans.png"/></a>
 		</div>
