--- a/views/layout.erb
+++ b/views/layout.erb
@@ -11,7 +11,7 @@
         <meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
 		<% if @nav == 'home' %>
-			<meta name="Description" content="Hi there! I'm Stanley Cen, a sophomore at MIT studying computer science and intern at Dropbox. I build things.">
+			<meta name="Description" content="Hi there! I'm Stanley Cen, a sophomore at MIT studying computer science and former intern at Dropbox. I build things.">
 		<% end %>
 		<link rel="dns-prefetch" href="//cdnjs.cloudflare.com">
 		<link rel="dns-prefetch" href="//ajax.googleapis.com">
